# scripts

./: Cargo.toml  Justfile
src/: config.rs  lib.rs  mail.rs  prelude.rs
