[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
anyhow = "1.0.56"
lettre = { version = "0.10.0-rc.4", features = ["builder", "serde", "smtp-transport", "rustls-tls"], default-features = false }
xdg = "2.4.1"
dirs = "4.0.0"
serde = {version = "1.0.136", features = ["derive"] }
toml = "0.5.8"
serde_derive = "1.0.136"
xshell = "0.2.1"
