[package]
    name = "scripts"
    version = "0.1.0"
    edition = "2021"

[dependencies]
    clap = { version = "3.1.6", features = ["derive"] }
    anyhow = "1.0.56"
    lettre = { version = "0.10.0-rc.4", features = [
        "builder",
        "serde",
        "smtp-transport",
        "rustls-tls",
    ], default-features = false }
    xdg = "2.4.1"
    dirs = "4.0.0"
    toml = "0.5.8"
    serde_derive = "1.0.136"
    xshell = "0.2.1"
    shellexpand = "^2"
    subprocess = "^0.2"
    serde = { version = "^1.0", features = ["derive"] }
    serde_json = "^1.0"
regex = "1.5.5"
